# machine-learning-tricks

./: .gitignore  README.md  pyproject.toml
scripts/: 01-knn.py  02-knn-scikit.py  03-knn-style-trans.py  04-linear-regression.py  10-logistic-regression.py  11-bilinear-regression-model.py  12-neural-network.py  20-decision-tree.py  20-decision_tree.py  21-integrate-learning.py  22-kmeans.py  26-auto-encoder.py  auto-encoder.py  double_linear_model.py  integrate-learning.py  logistic_analysis.py
