[project]
name = "machine-learning-tricks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]

[tool.uv]
index-url = "https://pypi.mirrors.ustc.edu.cn/simple/"
extra-index-url = ["https://pypi.org/simple/"]
